--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -5,7 +5,25 @@ on:
     branches: [ dev, master ]
   workflow_dispatch:
 jobs:
-  test:
+  pre_job:
+    # continue-on-error: true # Uncomment once integration is finished
+    runs-on: [ubuntu-latest, windows-latest, macOS-latest]
+    # Map a step output to a job output
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
+        with:
+          # All of these options are optional, so you can remove them if you are happy with the defaults
+          concurrent_skipping: 'never'
+          skip_after_successful_duplicate: 'true'
+          paths_ignore: '["**/*.md", "**/docs/**",".github",".husky",".vscode","example"]'
+          do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
+
+  main_job:
+    needs: pre_job
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -43,4 +61,3 @@ jobs:
         uses: GabrielBB/xvfb-action@v1
         with:
           run: npm run test
-            
