--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [ 14.x ]
+        node-version: [ 15.14.0 ]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
