--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -18,7 +18,7 @@ jobs:
           # All of these options are optional, so you can remove them if you are happy with the defaults
           concurrent_skipping: 'never'
           skip_after_successful_duplicate: 'true'
-          paths_ignore: '["**/*.md", "docs/**",".github/**",".husky/**",".vscode/**","example/**"]'
+          paths: '["e2e/**", "env/**", "src/**", "package-lock.json"]'
           do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
 
   main_job:
