--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [ 15.14.0 ]
+        node-version: [ '>=14.15.0' ]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
