--- a/package.json
+++ b/package.json
@@ -57,27 +57,28 @@
     "electron-updater": "4.3.9",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
-    "sharp": "0.29.1"
+    "sharp": "0.29.1",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "11.1.1",
-    "@angular-devkit/build-angular": "^0.1102.13",
-    "@angular-eslint/builder": "4.2.0",
-    "@angular-eslint/eslint-plugin": "4.2.0",
-    "@angular-eslint/eslint-plugin-template": "4.2.0",
-    "@angular-eslint/schematics": "4.2.0",
-    "@angular-eslint/template-parser": "4.2.0",
-    "@angular/animations": "11.2.12",
-    "@angular/cli": "11.2.11",
-    "@angular/common": "11.2.12",
-    "@angular/compiler": "11.2.12",
-    "@angular/compiler-cli": "11.2.12",
-    "@angular/core": "11.2.12",
-    "@angular/forms": "11.2.12",
-    "@angular/language-service": "11.2.12",
-    "@angular/platform-browser": "11.2.12",
-    "@angular/platform-browser-dynamic": "11.2.12",
-    "@angular/router": "11.2.12",
+    "@angular-builders/custom-webpack": "13.0.0",
+    "@angular-devkit/build-angular": "^12.2.14",
+    "@angular-eslint/builder": "^12.7.0",
+    "@angular-eslint/eslint-plugin": "^12.7.0",
+    "@angular-eslint/eslint-plugin-template": "^12.7.0",
+    "@angular-eslint/schematics": "^12.7.0",
+    "@angular-eslint/template-parser": "^12.7.0",
+    "@angular/animations": "12.2.14",
+    "@angular/cli": "12.2.14",
+    "@angular/common": "12.2.14",
+    "@angular/compiler": "12.2.14",
+    "@angular/compiler-cli": "12.2.14",
+    "@angular/core": "12.2.14",
+    "@angular/forms": "12.2.14",
+    "@angular/language-service": "12.2.14",
+    "@angular/platform-browser": "12.2.14",
+    "@angular/platform-browser-dynamic": "12.2.14",
+    "@angular/router": "12.2.14",
     "@commitlint/cli": "13.2.1",
     "@commitlint/config-conventional": "13.2.0",
     "@etanjs/cli": "1.0.3",
@@ -131,15 +132,14 @@
     "sass-resources-loader": "2.2.1",
     "spectron": "14.0.0",
     "ts-node": "9.1.1",
-    "tslib": "2.2.0",
-    "typescript": "4.1.5",
+    "typescript": "4.3.5",
     "wait-on": "5.3.0",
     "webdriver-manager": "12.1.8",
     "wrap-ansi": "8.0.0",
-    "zone.js": "0.11.4"
+    "zone.js": "~0.11.4"
   },
   "engines": {
-    "node": ">=15.0.0"
+    "node": ">=14.0.0"
   },
   "browserslist": [
     "chrome 83"
