--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "karma-electron": "7.0.0",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
+    "lint-staged": "^12.1.2",
     "mocha": "8.3.2",
     "ng-zorro-antd": "12.1.0",
     "npm-run-all": "4.1.5",
